New version for Spring '20, promoted version and README.md update

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,14 +1,5 @@
 {
     "orgName": "Communities Assets",
     "edition": "Developer",
-    "language": "en_US",
-    "features": [],
-    "settings": {
-        "lightningExperienceSettings": {
-            "enableS1DesktopEnabled": true
-        },
-        "userManagementSettings": {
-            "enableNewProfileUI": true
-        }
-    }
+    "features": []
 }
