--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,10 +2,17 @@
     "packageDirectories": [
         {
             "path": "communities-assets",
-            "default": true
+            "default": true,
+            "package": "Communities Assets",
+            "versionName": "ver 1.0",
+            "versionNumber": "1.0.0.NEXT"
         }
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "47.0"
+    "sourceApiVersion": "48.0",
+    "packageAliases": {
+        "Communities Assets": "0HoB0000000Cb0iKAC",
+        "Communities Assets@1.0.0-1": "04tB0000000Oiq0IAC"
+    }
 }
